<resources>
    <string name="app_name">A-EPPS</string>
    <string name="login">Iniciar Sesion</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="signup_btn">Registrar</string>
    <string name="signup">Registrar un nuevo usuario</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="identification">Ficha de usuario</string>
    <string name="name">Nombre completo</string>
    <string name="cost_center">Centro de costos</string>
    <string name="area">Area</string>
    <string name="section">Sección</string>
    <string name="inventory">Inventario</string>
    <string name="new_order">Nueva Orden</string>
    <string name="stock">Cantidad en stock:</string>
    <string name="stock_label">Cantidad en stock</string>
    <string name="search">Buscar un item</string>
    <string name="search_user">Buscar un usuario...</string>
    <string name="search_area">Buscar una area...</string>
    <string name="list">Lista de ordenes</string>
    <string name="user_list">Selección</string>
    <string name="add_user">Agregar un usuario</string>
    <string name="manage_user">Administrar usuarios</string>
    <string name="add_support">Soporte técnico</string>
    <string name="add_a_area">Agregar una area</string>
    <string name="add_item">Crear un nuevo item</string>
    <string name="edit_item">Editar el inventario del item</string>
    <string name="add_area">Crear una nueva area</string>
    <string name="add_section">Crear una nueva sección</string>
    <string name="item_name">Nombre del item</string>
    <string name="item_reference">Referencia</string>
    <string name="item_new_inventory">Nueva cantidad en inventario</string>
    <string name="description">Descipción</string>
    <string name="default_qty_label">Cantidad por defecto</string>
    <string name="selected_qty_label">Cantidad solicitada</string>
    <string name="owner_label">Asignado a</string>
    <string name="order_label">Pedido</string>
    <string name="canel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="sign">Firma</string>
    <string name="sign_aut">Firma de supervisor</string>
    <string name="save_sign">Guardar firma</string>
    <string name="touch_to_sign">Toque aqui para solicitar firma</string>
    <string name="comments">Comentarios</string>
    <string name="order_details">Detalle de la orden</string>
    <string name="order_num">Número de orden:</string>
    <string name="no_items">No hay items para mostrar</string>
    <string name="fill_the_fields">Por favor complete todos los campos para continuar</string>
    <string name="signature_needed">La firma es necesaria para continuar</string>
    <string name="authentication_failed">Lo sentimos, el nombre de usuario o la contraseña no coinciden</string>
    <string name="default_error">Lo sentimos, ha ocurrido un error, por favor contacte a soporte técnico</string>
    <string name="qty_error">Lo sentimos, la cantidad solicitada no puede ser mayor que la cantidad en inventario</string>
    <string name="charts">Indicadores</string>
    <string name="total">Total:</string>
    <string name="total_orders">Total de pedidos:</string>
    <string name="section_no_areas">La sección seleccionada no cuenta con areas asociadas</string>
    <string name="details">Ver detalles</string>
    <string name="details_label">Detalles</string>
    <string name="configuration">Configuración</string>
    <string name="qty_specific">Cantidad permitida en un periodo de tiempo</string>
    <string name="each_days">Periodo de tiempo en días</string>
    <string name="succesfully_created">Nuevo registro creado</string>
    <string name="gallery">Desde galeria</string>
    <string name="take_picture">Tomar una foto</string>
    <string name="user_already_exists">Un usuario con ese nombre ya existe en la base de datos</string>
    <string name="update_existent">Actualizar existente</string>
    <string name="create_new">Crear nuevo</string>
    <string name="order_to_area">Crear pedido a un area</string>
    <string name="add_image_title">Añadir una imagen</string>
    <string name="add_image_body">¿Cómo desea realizar esta acción?</string>
    <string name="support_title">Ponte en contacto con nosotros</string>
    <string name="support_label">En caso de tener alguna duda, inquietu o problema técnico por favor comunicarse al número:\n\n +57 312 7531530</string>
</resources>
