<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/charts"
        android:icon="@drawable/ic_format_align_justify"
        android:title="@string/charts"
        app:showAsAction="always|collapseActionView"/>
    <item android:id="@+id/list_orders"
        android:icon="@drawable/ic_format_align_justify"
        android:title="@string/list"
        app:showAsAction="always|collapseActionView"/>
    <item android:id="@+id/add_item"
        android:icon="@drawable/ic_add_circle_outline"
        android:title="@string/add_item"
        app:showAsAction="always|collapseActionView"/>
    <item android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
</menu>