<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimary">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:padding="8dp"
                android:id="@+id/edit_identification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="1"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_shape_white"
                android:inputType="text"
                android:hint="@string/identification" />

            <EditText
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="1"
                android:hint="@string/name"
                android:textColorHint="@color/colorAccent"
                android:background="@drawable/button_shape_white"
                android:textColor="@color/colorAccent"
                android:inputType="text" />

            <EditText
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_shape_white"
                android:inputType="textEmailAddress"
                android:hint="@string/username" />

            <EditText
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="@color/colorAccent"
                android:background="@drawable/button_shape_white"
                android:textColor="@color/colorAccent"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background_white"
                android:text="@string/signup_btn"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/login" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>