<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/add_user"
                android:textColor="@color/colorPrimary"
                android:textSize="24dp"
                android:textStyle="bold" />

            <EditText
                android:layout_marginTop="8dp"
                android:id="@+id/edit_identification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_white"
                android:ems="10"
                android:hint="@string/identification"
                android:padding="8dp" />

            <EditText
                android:layout_marginTop="8dp"
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_white"
                android:ems="10"
                android:hint="@string/name"
                android:padding="8dp" />

            <EditText
                android:id="@+id/edit_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_white"
                android:ems="10"
                android:hint="@string/area"
                android:padding="8dp" />

            <EditText
                android:id="@+id/edit_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_white"
                android:ems="10"
                android:hint="@string/section"
                android:padding="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:background="@drawable/ic_add_a_photo" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_photo"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorSoftGray"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_white"
                    android:text="@string/canel"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/save"
                    android:layout_marginLeft="4dp"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>